Added mongoose, passport, bcrypt; moved user model and set password encryption

--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "sinon-chai": "^2.11.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "mongoose": "^4.10.7",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
