--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.15.3",
     "mongoose": "^4.10.7",
     "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0"
   }
 }
